# VertexFormatConvert

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflows/: main.yml
cmake/: config.cmake  install.cmake
cmake/templates/: NoExport.h  UnixExport.h  WindowsExport.h
doc/: CMakeLists.txt  Doxyfile.in
lib/: CMakeLists.txt  README.md
lib/include/VFC/: Config.h  Converter.h  IndexData.h  VertexFormat.h  VertexValue.h
lib/src/: Converter.cpp  HalfFloat.cpp  HalfFloat.h  VertexFormat.cpp  VertexValue.cpp
lib/test/: CMakeLists.txt  ConverterTest.cpp  VertexFormatTest.cpp  VertexValueTest.cpp
tool/: Base64.cpp  Base64.h  CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  Path.cpp  Path.h  README.md  ResultFile.cpp  ResultFile.h  main.cpp  vfc.manifest.in
tool/test/: Base64Test.cpp  CMakeLists.txt  ConfigFileTest.cpp  PathTest.cpp  ResultFileTest.cpp
tool/test/functional/: .gitignore  input-base64.json  input.json  output-base64.json  output.json  run-base64-test.bat  run-base64-test.sh  run-test.bat  run-test.sh
